Change jdk-16.0.2 to jdk-11.0.16 and change code